force-app/main/default/objects/Community_Member_Registration_Form__c/Community_Member_Registration_Form__c.object-meta.xml
<CustomObject>
    <description>Stores Registration Details Submitted by Community Members through Vidhaikal  Ngo Site.</description>
    <label>Community Member Registration Form</label>
    <nameField>
        <displayFormat>CMR - {YYYY} - {0000}</displayFormat>
        <label>Community Member Registration Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Member Registraton Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>