force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Full street or door number details of the registrant’s residential address.</description>
    <inlineHelpText>Enter Street or area, door number details</inlineHelpText>
    <label>Address Line 1</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>