force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>Obtain Registrant landmark and additional information</description>
    <inlineHelpText>Enter the near landmark</inlineHelpText>
    <label>Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>