force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <description>Income range of the registrant. Used for socio-economic classification and program eligibility.</description>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>