force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Approve_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reason__c</fullName>
    <label>Approve Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>