force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Confirm_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Email__c</fullName>
    <description>Used to verify that the applicant entered the correct email. Should match the Email field through validation.</description>
    <inlineHelpText>Re-Enter Your Email Address exactly as above to confirm</inlineHelpText>
    <label>Confirm Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>