force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Registrant country residence</description>
    <inlineHelpText>Select your Country</inlineHelpText>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
                <default>true</default>
                <label>India</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>