force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Primary email address of the registrant. Used for communication, verification, and user account creation.</description>
    <inlineHelpText>Email Should be in format , abc@example.com</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>