force-app/main/default/objects/Community_Member_Registration_Form__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Registrant’s given name. Used for identification and communication.</description>
    <label>First Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>