force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Registrant’s family name or surname. Required to uniquely identify the applicant.</description>
    <label>Last Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>