force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>Registrant’s mobile phone number. Used for follow-ups and communication.</description>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>