force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Proof_of_Identity__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Identity__c</fullName>
    <description>Registrant has to upload valid  proof of identity  for verification purpose</description>
    <inlineHelpText>Select Any one Proof</inlineHelpText>
    <label>Proof of Identity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>