force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>