force-app/main/default/objects/Community_Member_Registration_Form__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Postal code of the registrant’s address. Helps with geographic categorization and location-based programs.</description>
    <inlineHelpText>Postal / zip code</inlineHelpText>
    <label>Zipcode</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>