force-app/main/default/objects/Community_Member_Registration_Form__c/validationRules/Confirm_Email_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_Email_Match</fullName>
    <active>false</active>
    <description>Registrant should enter  email in confirm email field  as given in email field</description>
    <errorConditionFormula>Email__c  &lt;&gt;  Confirm_Email__c</errorConditionFormula>
    <errorMessage>Confirm Email should be same as Email</errorMessage>
</ValidationRule>