force-app/main/default/objects/Community_Member_Registration_Form__c/validationRules/Mobile_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Format</fullName>
    <active>false</active>
    <description>Registrant need to enter a mobile number valid of 10 digits</description>
    <errorConditionFormula>NOT(REGEX( Mobile_Number__c , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorMessage>Enter a valid mobile number</errorMessage>
</ValidationRule>