force-app/main/default/objects/Community_Member_Registration_Form__c/validationRules/Validate_Password_and_confirm.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Password_and_confirm</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    /* Password length check */
    LEN(Password__c) &lt; 8,
    LEN(Password__c) &gt; 14,

    /* Password complexity check */
    NOT(REGEX(Password__c, &quot;^(?=.*[A-Z])(?=.*[a-z])(?=.*[0-9])(?=.*[!@#$%^&amp;*()_+\\-={}:;\&quot;&apos;&lt;&gt;,.?/]).{8,14}$&quot;))

)</errorConditionFormula>
    <errorMessage>Password must be 8–14 characters, include uppercase, lowercase, number, and special character.</errorMessage>
</ValidationRule>