force-app/main/default/objects/Community_Member_Registration_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Approve_Reason__c</columns>
    <columns>Rejection_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>